tests/a/tests/integrity/fail/fn/fn.2.rs
#![allow(unused_variables)]
#![allow(unused_assignments)]

#[cnbt::tag({*}{*} fn({a,bin}{a,bin}) -> {a,bin}{a,bin})]
fn id(x: i32) -> i32 {
    x
}

fn main() {
    #[cnbt::tag({bin}{bin})]
    let x = id(5);
}